# bladeway-autoclicker

./: Cargo.toml  build.rs
src/: clicker.rs  gui.rs  gui_logic.rs  main.rs
src/gui/: gui_logic.rs  gui_view.rs  mod.rs
src/sound/: mod.rs  sound_util.rs
src/windows/: key.rs  mod.rs  mouse_util.rs
