[package]
name = "bwauto"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
iced = "0.13.1"
lazy_static = "1.5.0"
log = "0.4.27"
mouse-rs = "0.4.2"
tokio = "1.46.1"
windows = { version = "0.61.3", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader"
]}
